--- a/test/fixtures/articles.yml
+++ b/test/fixtures/articles.yml
@@ -1,13 +1,13 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  tile: MyString
   content: MyText
   category_id: 1
   active: false
 
 two:
-  title: MyString
+  tile: MyString
   content: MyText
   category_id: 1
   active: false
